// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CARD_STYLES > matches snapshot 1`] = `
"
  :host { display: block; }

  ha-card {
    padding: 0 6px 2px;
    box-sizing: border-box;
    position: relative; /* anchor for .sc-version and #sc-debug */
    font-family: var(--paper-font-body1_-_font-family, sans-serif);
    color: #888; /* gray */
    font-size: calc(14px * var(--ttsc-font-scale, 1));
  }

  .section-header {
    color: var(--ttsc-header-color, #2196F3); /* Material Blue */
    font-size: calc(15px * var(--ttsc-font-scale, 1));
    padding: 2px 0 2px 0;
    margin-top: 1px;
  }

  .section-header.has-controls {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 6px;
    position: relative;
  }
  .section-title { flex: none; }
  /* card-level badge: pinned to the top-centre of the card so it shows even when
     no section renders, independent of the header layout */
  .sc-version {
    position: absolute;
    left: 50%;
    top: 3px;
    transform: translateX(-50%);
    z-index: 1;
    font-family: monospace;
    font-size: calc(9px * var(--ttsc-font-scale, 1));
    font-weight: normal;
    color: #888;
    white-space: nowrap;
    pointer-events: none;
  }
  .slide-ctrls { display: inline-flex; align-items: center; gap: 0; flex: none; }
  /* grouped-pill treatment mirroring ha-planetary-solar-system-card's .nav
     buttons: translucent fill, 1px divider border, shared edges collapsed, only
     the outer corners rounded. */
  .slide-btn {
    position: relative;
    box-sizing: border-box;
    cursor: pointer;
    color: #888;
    vertical-align: middle;
    background: color-mix(in srgb, currentColor 15%, transparent);
    border: 1px solid var(--divider-color, color-mix(in srgb, currentColor 25%, transparent));
    border-radius: 0;
    /* force monochrome text glyphs so the stop/resume icon obeys 'color'
       (grey while running, orange only when stopped) rather than falling
       back to a colour emoji */
    font-variant-emoji: text;
    font-size: calc(13px * var(--ttsc-font-scale, 1));
    line-height: 1;
    padding: 0;
    /* fixed box so the stop/resume shape swap never shifts the nav buttons */
    min-width: calc(20px * var(--ttsc-font-scale, 1));
    height: calc(18px * var(--ttsc-font-scale, 1));
    display: inline-flex;
    align-items: center;
    justify-content: center;
  }
  .slide-btn + .slide-btn { margin-left: -1px; }
  .slide-btn:first-child { border-radius: 6px 0 0 6px; }
  .slide-btn:last-child { border-radius: 0 6px 6px 0; }
  /* the stop / resume icons are drawn as CSS shapes, not font glyphs: square
     and triangle glyphs both position off the text baseline and how far off
     depends on the font, so a glyph never sits reliably centred. A pseudo-
     element is a flex child of the button and lands dead centre everywhere. */
  .slide-btn.toggle::before {
    content: "";
    background: currentColor;
    width: calc(11px * var(--ttsc-font-scale, 1));
    height: calc(11px * var(--ttsc-font-scale, 1));
    border-radius: 1px;
  }
  .slide-btn.toggle.paused::before {
    height: calc(12px * var(--ttsc-font-scale, 1));
    border-radius: 0;
    clip-path: polygon(0 0, 100% 50%, 0 100%);
  }
  /* prev / next chevrons, also CSS shapes: a two-border corner rotated 45°.
     The box is flex-centred and rotation is about its centre, so the chevron
     stays centred — unlike a ❮/❯ glyph, whose size and vertical position ride
     the font metrics and differ from machine to machine. */
  .slide-btn.nav::before {
    content: "";
    width: calc(5px * var(--ttsc-font-scale, 1));
    height: calc(5px * var(--ttsc-font-scale, 1));
    border: 2px solid currentColor;
    border-left: 0;
    border-bottom: 0;
  }
  .slide-btn.nav.next::before { transform: rotate(45deg); margin-left: -1px; }
  .slide-btn.nav.prev::before { transform: rotate(-135deg); margin-right: -1px; }
  .slide-btn:hover { color: #ccc; background: color-mix(in srgb, currentColor 25%, transparent); z-index: 1; }
  .slide-btn:focus-visible { outline: 1px solid #2196F3; outline-offset: 1px; z-index: 1; }
  /* while paused the whole control group turns orange, not just the toggle */
  .slide-ctrls.paused .slide-btn {
    color: orange;
    border-color: color-mix(in srgb, currentColor 35%, transparent);
  }

  .game-row {
    display: flex;
    align-items: center;
    height: var(--ttsc-row-height, 28px);
    /* equal padding above and below every row, so the divider sits centred in
       the space: <pad> · row · <pad> · line · <pad> · row · <pad> · … */
    padding: var(--ttsc-row-padding, 5px) 0;
    /* follow the active HA theme's divider (visible in light and dark, matches
       other cards); the rgba fallback covers the standalone / no-theme case */
    border-bottom: 1px solid var(--divider-color, rgba(255,255,255,0.04));
    gap: 0;
    position: relative;
  }

  .team-pos {
    box-sizing: border-box;
    display: block;
    width: 24px;
    min-width: 24px;
    /* balance the card's 6px left padding so the number sits an equal gap from
       the card edge and from the next cell */
    padding-right: 6px;
    font-size: calc(14px * var(--ttsc-font-scale, 1));
    font-variant-numeric: tabular-nums;
    text-align: center;
    color: var(--ttsc-opponent-color, #777);
    overflow: hidden;
  }

  .team-col {
    display: flex;
    flex-direction: column;
    justify-content: center;
    overflow: hidden;
    /* the configured width is the preferred size; keep a 60px floor so a narrow
       dashboard column compresses the names rather than overflowing the row */
    min-width: 60px;
  }
  .team-col-a {
    text-align: right; padding-right: 3px;
    width: var(--ttsc-team-col-a-width, var(--ttsc-team-col-width, 99px));
  }
  .team-col-b {
    text-align: left; padding-left: 3px;
    width: var(--ttsc-team-col-b-width, var(--ttsc-team-col-width, 99px));
  }

  .team-name {
    font-size: calc(13px * var(--ttsc-font-scale, 1));
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    line-height: 1.2;
  }
  .team-rank {
    font-size: calc(9px * var(--ttsc-font-scale, 1));
    line-height: 1.2;
    white-space: nowrap;
    overflow: hidden;
  }

  .logo {
    width: var(--ttsc-logo-width, 30px);
    min-width: var(--ttsc-logo-width, 30px);
    display: flex;
    align-items: center;
    justify-content: center;
    height: var(--ttsc-row-height, 28px);
    overflow: hidden;
  }
  .logo-a { padding-right: 3px; }
  .logo-b { padding-left:  3px; }
  .logo img {
    width: var(--ttsc-logo-width, 30px);
    height: var(--ttsc-row-height, 28px);
    object-fit: contain;
    display: block;
  }

  .score {
    width: var(--ttsc-score-width, 34px);
    min-width: var(--ttsc-score-width, 34px);
    font-size: calc(20px * var(--ttsc-font-scale, 1));
    font-weight: bold;
    height: var(--ttsc-row-height, 28px);
    display: flex;
    flex-direction: row;
    align-items: center;
    align-self: center;
  }
  .score-a { justify-content: flex-end; }
  .score-b { justify-content: flex-start; }

  .colon {
    width: var(--ttsc-colon-width, 9px);
    min-width: var(--ttsc-colon-width, 9px);
    font-size: calc(17px * var(--ttsc-font-scale, 1));
    font-weight: bold;
    text-align: center;
    height: var(--ttsc-row-height, 28px);
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .tv {
    position: absolute;
    top: 2px;
    right: 2px;
    font-size: 0;
  }
  .tv-badge {
    font-size: calc(8px * var(--ttsc-font-scale, 1));
    font-weight: bold;
    color: white;
    border-radius: 3px;
    padding: 1px 2px;
    white-space: nowrap;
  }
  .tv-tooltip {
    position: relative;
    cursor: default;
  }
  .tv-tooltip::after {
    content: attr(data-tooltip);
    position: absolute;
    bottom: calc(100% + 4px);
    left: 50%;
    transform: translateX(-50%);
    background: #222;
    color: #fff;
    font-size: calc(10px * var(--ttsc-font-scale, 1));
    font-weight: bold;
    padding: 3px 6px;
    border-radius: 4px;
    white-space: pre-wrap;
    width: max-content;
    max-width: 300px;
    text-align: left;
    pointer-events: none;
    opacity: 0;
    transition: opacity 0.15s;
    z-index: 10;
  }
  .tv-tooltip:hover::after {
    opacity: 1;
  }

  .message {
    flex: 1;
    min-width: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: calc(13px * var(--ttsc-font-scale, 1));
    font-weight: bold;
    line-height: 1.1;
    padding-left: 4px;
  }
  .msg-sub {
    font-size: calc(10px * var(--ttsc-font-scale, 1));
    font-weight: normal;
    color: #666; /* dimgray */
    line-height: 1.1;
  }

  .empty {
    padding: 8px 4px;
    font-size: calc(13px * var(--ttsc-font-scale, 1));
    color: #555; /* dark gray */
  }

  @keyframes score-flash {
    0%, 100% { opacity: 1; }
    50% { opacity: 0; }
  }
  .score-fresh {
    animation: score-flash 0.5s ease-in-out infinite;
  }
  @media (prefers-reduced-motion: reduce) {
    .score-fresh {
      animation: none;
    }
  }
"
`;

exports[`SportScoreboardCard snapshots > version badge HTML 1`] = `"<span id="sc-version" class="sc-version">v<!--?-->test</span>"`;

exports[`rowHtml structural snapshots > renders BYE markup 1`] = `
"<!---->
<div class="game-row">
  <!--?-->
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--ttsc-team-color, var(--primary-text-color, white));font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--ttsc-team-color, var(--primary-text-color, white))"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a" style="background:transparent;color:black"><!--?-->95</div>
  <div class="colon" style="background:transparent;color:transparent"><!--?-->:</div>
  <div class="score score-b" style="background:transparent;color:black"><!--?-->90</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--ttsc-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--ttsc-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:darkgray">Bye</span></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`rowHtml structural snapshots > renders IN markup 1`] = `
"<!---->
<div class="game-row">
  <!--?-->
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--ttsc-team-color, var(--primary-text-color, white));font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--ttsc-team-color, var(--primary-text-color, white))"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a" style="background:lightgray;color:var(--ttsc-leading-color, brown)"><!--?-->95</div>
  <div class="colon" style="background:lightgray;color:black"><!--?-->:</div>
  <div class="score score-b" style="background:lightgray;color:black"><!--?-->90</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--ttsc-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--ttsc-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:var(--ttsc-live-color, indianred)"><!--?--></span><!--?--><!--?--></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`rowHtml structural snapshots > renders IN with fresh score 1`] = `
"<!---->
<div class="game-row">
  <!--?-->
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--ttsc-team-color, var(--primary-text-color, white));font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--ttsc-team-color, var(--primary-text-color, white))"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a score-fresh" style="background:lightgray;color:var(--ttsc-leading-color, brown)"><!--?-->95</div>
  <div class="colon score-fresh" style="background:lightgray;color:black"><!--?-->:</div>
  <div class="score score-b score-fresh" style="background:lightgray;color:black"><!--?-->90</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--ttsc-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--ttsc-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:var(--ttsc-live-color, indianred)"><!--?--></span><!--?--><!--?--></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`rowHtml structural snapshots > renders POST markup 1`] = `
"<!---->
<div class="game-row">
  <!--?-->
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--ttsc-team-color, var(--primary-text-color, white));font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--ttsc-team-color, var(--primary-text-color, white))"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a" style="background:transparent;color:var(--ttsc-winner-color, orange)"><!--?-->95</div>
  <div class="colon" style="background:transparent;color:#777"><!--?-->:</div>
  <div class="score score-b" style="background:transparent;color:var(--ttsc-loser-color, darkgray)"><!--?-->90</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--ttsc-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--ttsc-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:var(--ttsc-winner-color, orange)"><!--?--></span><!--?--><!--?--></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`rowHtml structural snapshots > renders PRE markup 1`] = `
"<!---->
<div class="game-row">
  <!--?-->
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--ttsc-team-color, var(--primary-text-color, white));font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--ttsc-team-color, var(--primary-text-color, white))"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a" style="background:#303030;color:black"><!--?-->–</div>
  <div class="colon" style="background:#303030;color:black"><!--?-->:</div>
  <div class="score score-b" style="background:#303030;color:black"><!--?-->–</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--ttsc-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--ttsc-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:darkgray"><!--?--></span><!--?--><!--?--></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`rowHtml structural snapshots > renders with showLogos enabled 1`] = `
"<!---->
<div class="game-row">
  <!--?-->
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--ttsc-special-color, #2196F3);font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--ttsc-special-color, #2196F3)"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a" style="background:lightgray;color:var(--ttsc-leading-color, brown)"><!--?-->95</div>
  <div class="colon" style="background:lightgray;color:black"><!--?-->:</div>
  <div class="score score-b" style="background:lightgray;color:black"><!--?-->90</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--ttsc-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--ttsc-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:var(--ttsc-live-color, indianred)"><!--?--></span><!--?--><!--?--></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`widget structural snapshots > logoHtml 1`] = `"<!----><img alt="" src="https://cdn.example.com/lal.png">"`;

exports[`widget structural snapshots > messageHtml BYE 1`] = `"<!----><span style="color:darkgray">Bye</span>"`;

exports[`widget structural snapshots > messageHtml IN short 1`] = `"<!----><span style="color:var(--ttsc-live-color, indianred)"><!--?-->Q3 5:00</span><!--?--><span class="msg-sub"><!--?-->Touchdown - LAL</span><!--?-->"`;

exports[`widget structural snapshots > messageHtml IN truncated 1`] = `"<!----><span style="color:var(--ttsc-live-color, indianred)"><!--?-->Q3 5:00</span><!--?--><span class="msg-sub tv-tooltip" data-tooltip="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"><!--?-->AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA&gt;</span><!--?-->"`;

exports[`widget structural snapshots > messageHtml POST 1`] = `"<!----><span style="color:var(--ttsc-winner-color, orange)"><!--?-->Final</span><!--?--><span class="msg-sub"><!--?-->LAL leads 2-1</span><!--?-->"`;

exports[`widget structural snapshots > messageHtml PRE with sub 1`] = `"<!----><span style="color:darkgray"><!--?-->2h</span><!--?--><span class="msg-sub"><!--?-->Houston, LAL -3.5</span><!--?-->"`;

exports[`widget structural snapshots > tvHtml IN 1`] = `"<!----><span class="tv-badge" style="background:var(--ttsc-live-color, indianred)"><!--?-->ESP&gt;</span>"`;

exports[`widget structural snapshots > tvHtml PRE single 1`] = `"<!----><span class="tv-badge" style="background:#666"><!--?-->ESP&gt;</span>"`;

exports[`widget structural snapshots > tvHtml multi-network 1`] = `"<!----><span class="tv-tooltip" data-tooltip="ESPN · ESPN2 · TNT"><!--?--><span class="tv-badge" style="background:#666"><!--?-->ESP&gt;</span></span>"`;
